Fixed layout on iPhone 5

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2 {
 }
 
 .sidebar {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex; 
   flex-wrap: wrap;
   justify-content: center;
@@ -78,7 +78,21 @@ h2 {
 
  }
 
+#errorslist {
+  text-align: center;
+  margin-left: 25%;
+  height: 470px;
+  position: fixed;
+  top: 0px;
+  padding-top: 150px;
+  background-color: white;
+  justify-self: center;
+  justify-content: center;
+}
 
+#errorslist ul {
+  list-style-type: none;
+}
 
  .buttonscontainer {
    margin-top: 10px;
@@ -96,6 +110,13 @@ h2 {
   justify-content: space-around;
 }
 
+@media (max-width: 320px) {
+  .canvascontainer {
+    max-width: 320px;
+    height: 350px;
+  }
+}
+
 @media (max-width: 700px) {
 
   #button1, #button2, #button3, #button4 {
@@ -106,7 +127,7 @@ h2 {
     display: block !important;
     position: fixed;
     top: 0px;
-    right: 10px;
+    right: 30px;
   }
   .heart {
     font-size: 0.8rem;
@@ -121,34 +142,69 @@ h2 {
     display: block !important;
     position: fixed;
     top: 35px;
-    right: 10px;
+    right: 30px;
   }
 
   .streak {
     display: block !important;
     position: fixed;
     top: 70px;
-    right: 10px;
+    right: 30px;
   }
 
 #titlemobile {
   position: fixed;
   top: 5px;
-  left: 5px;
+  left: 20px;
   font-size: 1rem;
   font-weight: 700;
 }
 #startbuttonmobile {
   position: fixed;
   top: 35px;
-  left: 5px;
+  left: 20px;
   padding: 5px;
   font-size: 0.8rem;
 }
 
+#difficultymobile {
+  position: fixed;
+  top: 70px;
+  left: 20px;
+  padding: 5px;
+  font-size: 0.65rem;
+  width: 75px;
 }
-@media (max-width: 900px) {
+.canvascontainer {
+  max-width: 350px;
+}
+
+#errorslist {
+  height: 240px;
+  width: 300px;
+  margin-left: 0px;
+  padding-left: 50px;
+  position: fixed;
+  top: 120px;
+  left: 0px;
+  padding-top: 20px;
+  background-color: white;
+  text-align: left;
+}
+
+
+#errorslist h2, #errorslist h3 {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+#errorslist h4 {
+  font-size: 0.9rem !important;
+}
+
+}
+@media (max-width: 1024px) {
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 }
